# RAN

./: CMakeLists.txt  README-zh-cn.txt  README.md  Toolchain-arm.cmake
HDFS_integrate/: RAN_install_HDFS.sh  data_prepare_HDFS.sh  install.sh  prepare_hdfs.sh
HDFS_integrate/compile/: Dockerfile  docker_build.sh  docker_run.sh  run-docker.sh
HDFS_integrate/hadoop/: core-site.xml  hadoop-env.sh  hdfs-site.xml  user_ec_policies.xml  workers
HDFS_integrate/hadoop-common-project/hadoop-common/src/main/native/src/org/apache/hadoop/io/erasurecode/: erasure_coder.c
include/: BandwidthWeight.h  ClientRequest.h  ECConfig.h  ECEncode.h  Exp.h  FileOpt.h  HDFS.h  MulPortTransfer.h  NetTransfer.h  PackedData.h  RAN.h  RepairChunkIndex.h  SelectNodes.h  ShareFunc.h  ec_config.bak
script/: HDFS_run_prepare.sh  RAN_HDFS_install.sh  create_env.sh  delete_datanode_info.sh  install_tools.sh  kill_all_pnetdevice.sh  kill_all_storagenodes.sh  kill_client.sh  kill_ip_storagenodes.sh  kill_pnetdevice.sh  limit_network.sh  make_run.sh  make_run_arm.sh  make_run_x86.sh  same_command.sh  scp_pnetdevice.sh  scp_pnetdevice_arm.sh  scp_same.sh  ssh-auto-send.exp  start_all_pnetdevice.sh  start_all_storagenodes.sh  start_client.sh  start_pnetdevice.sh  start_storagenodes.sh  test.sh  test_for_HDFS.sh  unlimit_network.sh
src/client/: ClientMain.c  ClientRequest.c  HDFS.c  RAN.c  RepairChunkIndex.c  SelectNodes.c
src/pnetdevice/: PNDMain.c
src/share_func/: BandwidthWeight.c  ECEncode.c  Exp.c  FileOpt.c  MulPortTransfer.c  NetTransfer.c  PackedData.c  ShareFunc.c
src/storagenodes/: StorageNodesMain.c
test_file/bandwidth/: node_bandwidth.txt
tools/dfs_tools_scripts/etc/: hosts  profile
tools/dfs_tools_scripts/hadoop/: core-site.xml  hdfs-site.xml  user_ec_policies.xml  workers
tools/dfs_tools_scripts/hive/: hive-env.sh  hive-site.xml  hive-site.xml_bak
(+4 files in other folders)
